# roboy_intents_classification

./: .gitignore  CMakeLists.txt  Intent-Classification.ipynb  README.md  intent_classification_ros.py  package.xml  requirements.txt  setup.sh  skipthoughts.py
data/intents/: creator_intent
include/: skipthoughts.py
intents/: age_intent  aim_intent  city_specific_intent  event_specific_intent  how_learn_intent  name_intent  skills_intent
launch/: intents.launch
scripts/: config.py  detect_intent.py
